# miniCalc

./: README.md
MiniCalculator/: pyproject.toml
MiniCalculator/src/minicalculator/: __init__.py  app.py
